# iot-sensor-stream-processor

./: README.md  main.py  pyproject.toml  requirements.txt
tests/: test_main.py
